--- a/src/main/webapp/css/servicer/servicerpage.css
+++ b/src/main/webapp/css/servicer/servicerpage.css
@@ -1,3 +1,13 @@
+		#header {
+  position: fixed;
+  top: 0px;
+  left: 0;
+  width: 100%;
+  height: 80px;
+  z-index: 99999;
+}
+
+
 #title{
 font-size:20px;	/* 字号 */
 font-weight:700;	/* 粗体 */
@@ -10,14 +20,6 @@ margin-bottom: 120px;
 }
 .akl{
 	display: inline;
-}
-img{
-float:left;	/* 图文混排 */
-margin-right: 20px;
-width: 100%;
-height: auto;
-max-width:30%;
-display:inline-block;  
 }
 
 /* Sidebar modules for boxing content */
@@ -116,7 +118,7 @@ display:inline-block;
 }
 .sidebar-module-inset {
   padding: 15px;
-  background-color: #f5f5f5;
+  background-color: #ececec;
   border-radius: 4px;
 }
 .sidebar-module-inset p:last-child,
