--- a/src/main/webapp/css/style_log.css
+++ b/src/main/webapp/css/style_log.css
@@ -1,6 +1,117 @@
-body.login{ background:url(/images/login/login_bgx.gif);}
 /*--login--*/
-.login_m{ width:403px;height:375px; margin-top:160px; margin-right: 100px; float:right; /*position: absolute;left:50%;top:50%;margin-left:-202px;margin-top:-188px;*/}
-.ad_m{width: 180px;height:100px;margin-top:120px;float:left;}
-.login_boder{ background: url(/images/login/login_m_bg.png) no-repeat; height:302px; overflow:hidden;}
-.login_padding{ padding:47px 47px 20px 47px;}
+.login_m {
+	width: 403px;
+	position: absolute;
+	left:50%;
+	top:55%;
+	margin-left:-202px;
+}
+
+.ad_m {
+	width: 180px;
+	height: 100px;
+	margin-top: 120px;
+	float: left;
+}
+
+.login_boder {
+	background: url(/images/login/login_m_bg.png) no-repeat;
+	height: 302px;
+	overflow: hidden;
+}
+
+.login_padding {
+	padding: 35px 35px 35px 35px;
+}
+
+article, aside, details, figcaption, figure, footer, header, hgroup,
+	menu, nav, section {
+	display: block;
+}
+
+ol, ul {
+	list-style: none;
+}
+
+blockquote, q {
+	quotes: none;
+}
+
+blockquote:before, blockquote:after, q:before, q:after {
+	content: '';
+	content: none;
+}
+
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+html, body {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+body {
+	background: #f3f2ee;
+	font-family: 'Montserrat', sans-serif;
+	color: #000000;
+	-webkit-font-smoothing: antialiased;
+}
+
+#particles {
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+}
+
+.intro {
+	position: absolute;
+	left: 0;
+	top: 20%;
+	padding: 0 20px;
+	width: 100%;
+}
+
+@media only screen and (max-width: 1000px) {
+	h1 {
+		font-size: 70px;
+	}
+}
+
+@media only screen and (max-width: 800px) {
+	h1 {
+		font-size: 48px;
+	}
+	h1::after {
+		height: 8px;
+	}
+}
+
+@media only screen and (max-width: 568px) {
+	.intro {
+		padding: 0 10px;
+	}
+	h1 {
+		font-size: 30px;
+	}
+	h1::after {
+		height: 6px;
+	}
+	p {
+		font-size: 18px;
+	}
+	.btn {
+		font-size: 16px;
+	}
+}
+
+@media only screen and (max-width: 320px) {
+	h1 {
+		font-size: 28px;
+	}
+	h1::after {
+		height: 4px;
+	}
+}
